# phantom

./: .gitignore  EXAMPLES.md  LICENSE  README.md  install.sh  phantom.py  pyproject.toml  requirements.txt
.github/workflows/: phantom-security-scan.yml
benchmark/: benchmark.py  comparative.py
demo/: README.md  demo_target.py  run_demo.py  test_demo_target.py
phantom/analyzer/: diff.py  filter_bypass.py  mitigation.py  response.py  scorer.py  semantic.py
phantom/core/: config.py  exceptions.py  findings.py  logger.py  profiles.py  progress.py  state.py  store.py  types.py
phantom/discovery/: classifier.py  crawler.py  fingerprinter.py
phantom/payloads/: adaptive.py  engine.py  evasion.py  library.py  mutation.py  orchestrator.py
phantom/payloads/data/: adversarial_goal.json  adversarial_suffix.json  adversarial_suffix.json.json  context_poisoning.json  direct.json  encoding.json  exfiltration.json  indirect.json  jailbreak.json  memory_poison.json  multi_modal.json  multi_turn.json  payload_fragmentation.json  prompt_mutation.json  role_confusion.json  system_prompt_leak.json  tool_exploit.json
phantom/report/: builder.py  cvss.py  html_builder.py  json_export.py  markdown.py  sarif.py
phantom_output/: phantom_report.json  phantom_report.md  report_http___localhost_5000_api_chat_20260526_152018.html
tests/: pytest.ini  test_adaptive.py  test_analyzer.py  test_auth.py  test_crawler.py  test_fingerprinter.py  test_orchestrator.py  test_payload_engine.py  test_semantic.py
