[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phantom"
version = "0.2.0"
description = "Elite-level prompt injection reconnaissance and exploitation framework for AI-powered web applications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Phantom Contributors", email = "contact@phantom.local"}
]
keywords = ["prompt-injection", "security", "ai", "testing", "exploitation"]

dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-beautifulsoup4>=4.12.0",
    "bandit>=1.7.0",
]

benchmark = [
    "openai>=1.0.0",
    "anthropic>=0.21.0",
    "google-generativeai>=0.3.0",
]

[tool.setuptools]
packages = ["phantom"]
include-package-data = true

[tool.setuptools.package-data]
phantom = [
    "payloads/data/*.json",
    "report/templates/*.jinja2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "demo"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

markers = [
    "asyncio: mark test as async (managed by pytest-asyncio)",
    "integration: mark test as integration test (requires services)",
    "slow: mark test as slow (may take >5s)",
    "security: mark test as security test",
    "unit: mark test as unit test",
]

addopts = "-v --strict-markers --tb=short"
minversion = "7.0"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C901",   # McCabe complexity
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "W503",   # line break before binary operator
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "phantom.test_*"
ignore_errors = true

[tool.coverage.run]
source = ["phantom"]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/demo/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
